--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
 
                     <input type="number" class="font-btn" id="font-size" value="20" min="10" max="100"
                         onchange="handleFontSizeChange()">
-                    <button class="font-btn" onclick="alignText('left')"><i class="fa-solid fa-align-left"></i></button>
+                    <button class="font-btn" onclick="alignText('left')">
+                        <i class="fa-solid fa-align-left"></i></button>
                     <button class="font-btn" onclick="alignText('center')"><i
                             class="fa-solid fa-align-center"></i></button>
                     <button class="font-btn" onclick="alignText('right')"><i
